# clarity_epp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clarity_epp.py  config.py  config.toml  genologics.conf  hamilton_filling_out.py  hamilton_purify.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: lint.yml  python.yml  test.yml
clarity_epp/: __init__.py
clarity_epp/export/: __init__.py  bioanalyzer.py  caliper.py  email.py  fueco.py  hamilton.py  illumina.py  labels.py  magnis.py  manual_pipetting.py  merge.py  myra.py  ped.py  sample.py  (+5 more)
export/: __init__.py  caliper.py  labels.py  manual_pipetting.py  ped.py  tapestation.py
files/: label_performance.csv
generate/: __init__.py  labels.py  ped.py  samplenames.py
placement/: __init__.py  artifact.py  barcode.py  plate.py
qc/: __init__.py  qubit.py  tapestation.py
samplesheet/: __init__.py  bioanalyzer.py  caliper.py  hamilton.py  manual_pipetting.py  tapestation.py  tecan.py  utils.py
scripts/: import_helix.sh  management_review.py  move_samples_to_new_workflow.py  postgres_duration_stats.sh  runLater.py  update_workflow.sh
templates/: Bioanalyzer_samplesheet.txt  NovaSeq_BCL2FASTQ_Reverse_Complement_Samplesheet.csv  NovaSeq_BCL2FASTQ_Samplesheet.csv  NovaSeq_BCLCONVERT_Reverse_Complement_Samplesheet.csv  NovaSeq_BCLCONVERT_Samplesheet.csv  README
tests/: test_config.py  test_export_illumina.py  test_export_sample.py  test_export_utils.py  test_upload_sample.py  test_upload_utils.py
upload/: __init__.py  bioanalyzer.py  samples.py  tapestation.py  tecan.py  utils.py
(+49 files in other folders)
