[project]
name = "clarity-epp"
version = "2.0.0"
description = "Clarity LIMS epp"
readme = "README.md"
authors = [
    { name = "Robert Ernst", email = "r.f.ernst-3@umcutrecht.nl" }
]
requires-python = "~=3.13.0"
dependencies = [
    "genologics~=2.0.0",
    "six~=1.17.0",
    "tenacity~=9.1.0",
    "xmltodict~=1.0.0",
]

[project.scripts]
clarity-epp = "clarity_epp:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest~=8.4.0",
    "pytest-mock~=3.15.0",
]
