[project]
name = "clarity-epp"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Robert Ernst", email = "r.f.ernst-3@umcutrecht.nl" },
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.13.1",
    "s4-clarity>=1.8.0",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.scripts]
clarity_epp = "clarity_epp:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
]
